--- a/style.css
+++ b/style.css
@@ -10,52 +10,84 @@ body {
   touch-action: none;
 }
 
+h1{
+  font-size: 1.5em;
+}
+
+h2{
+  font-size: 0.75em;
+}
+
+#copyright {
+  width: 100%;
+  position: absolute;
+  bottom: 15px;
+  text-align: center;
+  font-size: 0.5em;
+}
+
 #score {
-  margin-bottom: 5px;
+  margin-top: 5px;
   font-size: 20px;
+  position: absolute;
+  color: #fff;
+  text-align: center;
+  display: block;
+  width: 100%;
 }
 
 #gameArea {
-  width: 360px;
-  height: 640px;
+  width: 100%;
+  height: 100vh;
   background-color: #222;
   position: relative;
   overflow: hidden;
-  border-radius: 10px;
 }
 
 #player {
-  width: 40px;
-  height: 40px;
-  background-color: #ff5733;
+  width: 60px;
+  height: 60px;
+  background-image: url(../TurkeyBurger/images/player.png);
+  background-position: center center;
+  background-size: cover;
   position: absolute;
   top: 300px;
   left: 160px;
+  border: 3px solid #027030;
   border-radius: 5px;
 }
 
 #item {
-  width: 25px;
-  height: 25px;
-  background-color: yellow;
+  width: 50px;
+  height: 50px;
+  background-image: url(../TurkeyBurger/images/fruit.png);
+  background-position: center center;
+  background-size: cover;
+  border: 3px solid #ffa5da;
   border-radius: 50%;
   position: absolute;
 }
 
 #enemy {
-  width: 40px;
-  height: 40px;
-  background-color: #00f;
+  width: 60px;
+  height: 60px;
+  background-image: url(../TurkeyBurger/images/enemy.png);
+  background-position: center center;
+  background-size: cover;
   position: absolute;
   top: 50px;
   left: 160px;
+  border: 3px solid #ff8400;
   border-radius: 5px;
 }
 
 #powerup {
-  width: 25px;
-  height: 25px;
-  background-color: #0f0;
+  width: 50px;
+  height: 50px;
+  background-image: url(../TurkeyBurger/images/sickle.png);
+  background-position: center center;
+  background-size: cover;
+  border: 3px solid #f0f0f0;
   border-radius: 50%;
   position: absolute;
   display: none;
