--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ p{
   width: 100%;
   height: 100vh;
   background-color: #222;
-  position: relative;
+  position: absolute;
   overflow: hidden;
 }
 
