--- a/style.css
+++ b/style.css
@@ -50,11 +50,14 @@ p{
 
 #gameArea {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: #222;
-  position: absolute;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
   z-index: 10;
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 #player {
