--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ p{
   position: absolute;
   width: 100%;
   height: 100%;
+  min-height: 100%;
   background: #222;
   color: white;
   display: flex;
@@ -162,6 +163,7 @@ p{
   align-items: center;
   font-size: 28px;
   z-index: 20;
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 #startPage.hidden {
