--- a/style.css
+++ b/style.css
@@ -6,11 +6,14 @@ html, body {
 }
 
 body {
+  position: relative;
   margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
+  min-height: 100%;
+  height: calc(var(--vh, 1vh) * 100);
   background-color: #f0f0f0;
   font-family: sans-serif;
   flex-direction: column;
@@ -163,7 +166,7 @@ p{
   justify-content: center;
   align-items: center;
   font-size: 28px;
-  z-index: 20;
+  z-index: 15;
   height: calc(var(--vh, 1vh) * 100);
 }
 
@@ -226,13 +229,13 @@ p{
   top: 10px;
   right: 10px;
   font-size: 24px;
-  background: rgba(0,0,0,0.5);
+  background: rgba(229, 229, 229, 0.5);
   color: white;
   border: none;
   border-radius: 5px;
   padding: 5px 10px;
   cursor: pointer;
-  z-index: 15;
+  z-index: 20;
   margin: 0;
 }
 
